Change with my info

--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -10,7 +10,7 @@
 
 % moderncv themes
 \moderncvstyle{casual}                             % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\moderncvcolor{green}                               % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+\moderncvcolor{purple}                               % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 %\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -24,14 +24,14 @@
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
 % personal data
-\name{AmirHossein}{Goodarzi}
+\name{Parham}{Nikdouz}
 \title{Software Developer and Devops Engineer}                               % optional, remove / comment the line if not wanted
-\address{Moniriyeh}{Tehran}{Iran}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
-\phone[mobile]{+989197812588}                   % optional, remove / comment the line if not wanted
+\address{Salman Farsi}{Sari}{Iran}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\phone[mobile]{+989390702219}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
-\email{Amir@goodarzi.net}                               % optional, remove / comment the line if not wanted
-\homepage{www.goodarzi.net}                         % optional, remove / comment the line if not wanted
+\email{parham@cloudhelp.io}                               % optional, remove / comment the line if not wanted
+\homepage{www.pnikdouz.ir}                         % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 \photo[100pt][0.4pt]{me.jpg}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 \quote{}                                 % optional, remove / comment the line if not wanted
@@ -54,18 +54,17 @@
 \makecvtitle
 
 \section{Overview}
-I'm a software developer and DevOps who started from Windows based
-apps using Visual Basic and now using Python as his main programming
-language. After few years I started to work on web platform especially the
-backend side. After starting my career in backend development, I started
+I'm a software developer who started to work on web platform especially the
+backend side using PHP and now using JavaScript as his main programming
+language. After starting my career in backend development, I started
 to be a DevOps because I believe it’s a good opportunity when you do your backend job and operations, simultaneously.
 \section{Education}
-\cventry{2014--2018}{B.Sc}{Islamic Azad University - Tehran North Branch}{Tehran}{\textit{16.10}}{Robotics engineering}  % arguments 3 to 6 can be left empty
-\cventry{2009--2013}{Diploma}{Rahnama Highschool}{Tehran}{\textit{14}}{Mathematics and physics}
+\cventry{2014--2018}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{15.30}}{Software Engineering}  % arguments 3 to 6 can be left empty
+\cventry{2010--2014}{Diploma}{29 Aban Highschool}{Sari}{\textit{19.28}}{Mathematics and physics}
 
 \section{Thesis}
-\cvitem{title}{\emph{Control a robot using machine vision and neural networks}}
-\cvitem{supervisors}{Dr. Samir Zein}
+\cvitem{title}{\emph{Implementation of the Ros Package in the Docker}}
+\cvitem{supervisors}{Dr. Reza Javanmard}
 %\cvitem{description}{Short thesis abstract}
 
 \section{Experience}
@@ -156,14 +155,18 @@ administrator. At Phosphor, despite the limited resources, I learned how to mana
 \cvdoubleitem{Persian}{Native}{English}{Fluent}
 
 \section{Tools and Skills}
-\cvitem{Operating System}{Linux Family(ubuntu, Debian, CentOS, Fedora), *BSD Family(FreeBSD, OpenBSD}
-\cvitem{Virtualization}{Docker, LXC, LXD, KVM}
-\cvitem{Programming languages}{Python, C, bash}
-\cvitem{Databases}{Mysql, Postgresql, MongoDB, Redis}
-\cvitem{Python skills}{Django, Flask, Beautiful soap, simpleJSON, Pillow, karas}
+\cvitem{Operating System}{Linux Family(Ubuntu, Debian, CentOS)}
+\cvitem{Web Server}{Nginx, Apache}
+\cvitem{Containerization}{Docker}
+\cvitem{Version Control}{Git}
+\cvitem{Programming Languages}{PHP, Python, JavaScript, C++, Bash}
+\cvitem{Databases}{MySQL, MongoDB, Redis}
+\cvitem{Message-Broker}{RabbitMQ}
 \cvitem{Software Development Skill}{RestAPI structure, TDD}
-\cvitem{Web Development}{WordPress (theme, plugin and widget development)}
-\cvitem{Other tools}{Ansible}
+\cvitem{Web Development}{Laravel, CodeIgniter, Express}
+\cvitem{Code Documentation}{Jsdoc, Swagger}
+\cvitem{Code Analysis}{SonarQube}
+\cvitem{Other Skills}{Continuous Integration, Continuous Delivery, Gitlab CI/CD}
 
 %\section{Interests}
 %\cvitem{Music}{Classical, Rock, Alternative, Heavy Metal}
@@ -210,4 +213,3 @@ administrator. At Phosphor, despite the limited resources, I learned how to mana
 
 
 %% end of file `template.tex'.
-
