--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -25,12 +25,12 @@
 
 % personal data
 \name{Parham}{Nikdouz}
-\title{Software Developer and Devops Engineer}                               % optional, remove / comment the line if not wanted
+\title{Software Developer and DevOps Engineer}                               % optional, remove / comment the line if not wanted
 \address{Salman Farsi}{Sari}{Iran}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+989390702219}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
-\email{parham@cloudhelp.io}                               % optional, remove / comment the line if not wanted
+\email{pnikdouz@gmail.com}                               % optional, remove / comment the line if not wanted
 \homepage{www.pnikdouz.ir}                         % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 \photo[100pt][0.4pt]{me.png}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
@@ -55,136 +55,108 @@
 
 \section{Overview}
 I'm a software developer who started to work on web platform especially the
-backend side using PHP and now using JavaScript as his main programming
-language. After starting my career in backend development, I started
-to be a DevOps because I believe it’s a good opportunity when you do your backend job and operations, simultaneously.
+backend side using PHP and used Python for machine vision and computational intelligence and now using node.js for asynchronous programming. After starting my career in backend development, I started to be a DevOps because I believe it’s a good opportunity when you do your backend job and operations, simultaneously.
 \section{Education}
-\cventry{2014--2018}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{15.30}}{Software Engineering}  % arguments 3 to 6 can be left empty
+\cventry{2014--2019}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{GPA: 3.1/4}}{Software Engineering}  % arguments 3 to 6 can be left empty
 \cventry{2010--2014}{Diploma}{29 Aban Highschool}{Sari}{\textit{19.28}}{Mathematics and physics}
 
 \section{Thesis}
-\cvitem{title}{\emph{Implementation of the Ros Package in the Docker}}
+\cvitem{title}{\emph{Implementation of the ROS Package in the Docker Tool}}
 \cvitem{supervisors}{Dr. Reza Javanmard}
 %\cvitem{description}{Short thesis abstract}
 
 \section{Experience}
 %\subsection{Vocational}
-\cventry{2016--current}{Software engineer and DevOps}{Bel IoT Lab. }{Tehran}{}{Bel Lab. is an Internet of thing laboratory at the Sharif University of Technology. The main
-products of Bel Lab are Bel OS and Bel Cloud. It's an android based OS for smartphones
-that was completely deleted the needs from Google. At there I do the DevOps career and
-wrote the backend of Bel Cloud (Email web interface, cloud storage, user management
-panel). The main challenge that I faced was to make a secure and high-performance system.
-enough and make a secure and high-performance system. .\newline{}
+\cventry{2018--2019}{Software engineer and DevOps}{Sari}{}{Team Preparation for Overseas Projects.
 \begin{itemize}%
-\item \textbf{Technologies}: Apache, Docker, KVM, Proxmox, LXD, Git, Android OS, Python, PHP, Django, Nginx, Gitlab CI
+\item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, SonarQube, REST API, HTTPS, HTTP2, TLSV1.2
 \end{itemize}}
 %%new
-\cventry{2015--2016}{Backend Developer}{Arivan}{Tehran}{}{Arivan was a startup working on a gift recommend system (Vkado). The project and 
-also the startup was abandoned due to lack of resources. At Arivan I learned the basics 
-of databases and the best way to implement models of an MVC software.
+\cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{US}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
 \begin{itemize}%
-\item \textbf{Technologies}: Python, Flask, Apache, Docker, Nginx
+\item \textbf{Technologies}: Node.Js, AWS (SES, Lambda, Cloudwatch, Api gateway)
 \end{itemize}
 }
-%%
-\cventry{2015--2015}{frontend developer intern}{Gardeshnama}{Tehran}{}{Gardeshnama.com is a startup about tourism. At there I do some front-end development. I was intern at there
+\cventry{2017--2018}{Backend Developer}{Karaj}{}{Design and Implementation Dahyav website for renting house and villa
 \begin{itemize}%
-\item \textbf{Technologies}: Python, Django, React JS, Foundation
-\end{itemize}
-}
-\cventry{2014--2015}{Developer}{Phosphor Group}{Tehran}{}{phosphor Group is a software development group based in Tehran. Most of it's projects
-were based on WordPress and PHP. At there I was WordPress developer and system
-administrator. At Phosphor, despite the limited resources, I learned how to manage the performance issues with Apache
-\begin{itemize}%
-\item \textbf{Technologies}: PHP, Wordpress, Magento, Bootstrap
+\item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache
 \end{itemize}
 }
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description}
 
 \section{Freelance Projects}
 %\subsection{Vocational}
-\cventry{2018}{Fanplus}{DevOps}{}{}{
+\cventry{2018--2019}{Sysadmin}{Remote}{Tehran}{}{Use Squid for PSN and maintenance
 \begin{itemize}%
-\item \textbf{Technologies}: Golang, Docker, MongoDB
-\end{itemize}}
+\item \textbf{Technologies}: Centos, Squid
+\end{itemize}
+}
 %%new
-\cventry{2018}{DibaPoush.ir}{DevOps}{}{}{
+\cventry{2018--2019}{DevOps Enginner}{Remote}{Tehran}{}{It is a startup project
 \begin{itemize}%
-\item \textbf{Technologies}: Docker, Nginx, Django, Python, Gunicorn, Supervisor
-\end{itemize}}
-
-\cventry{2018}{Tikschool}{DevOps}{}{}{
+\item \textbf{Technologies}: Python, Django, gunicorn, Gitlab-CI, Heroku, AWS S3
+\end{itemize}
+}
+\cventry{2018--2019}{Sysadmin}{Sari}{}{Setting Up Jira Software and maintenance
 \begin{itemize}%
-\item \textbf{Technologies}: Docker, Nginx, Django, Python, Gunicorn, Supervisor
-\end{itemize}}
-
-\cventry{2017}{Garmsar MRI Center}{Developer}{}{}{
+\item \textbf{Technologies}: Ubuntu, Jira, Postgrers
+\end{itemize}
+}
+\cventry{2017--2018}{Backend Developer}{Karaj}{Dahyav}{}{Design and Implementation Dahyav website for renting house and villa
 \begin{itemize}%
-\item \textbf{Technologies}: Python, Telegram Bot API
-\end{itemize}}
-
-\cventry{2017}{Hamyhealth}{Developer and System administrator}{}{}{
+\item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache, REST API
+\end{itemize}
+}
+\cventry{2017--2018}{Developer}{Behshahr}{Detect Traffic Sign}{}{Detect traffic sign with image processing
 \begin{itemize}%
-\item \textbf{Technologies}: Wordpress, Nginx, Bootstrap, Mysql, PHP
-\end{itemize}}
-
-\cventry{2017}{Tradechallenge}{Developer and System administrator}{}{}{
+\item \textbf{Technologies}: Python, OpenCV
+\end{itemize}
+}
+\cventry{2017--2018}{Frontend and backend developer}{Behshahr}{Final Project System}{}{This application is written for managing the final project of university students
 \begin{itemize}%
-\item \textbf{Technologies}: Wordpress, Nginx, Bootstrap, Mysql, PHP
-\end{itemize}}
-
-\cventry{2017}{Dalcoub}{Developer and System administrator}{}{}{
+\item \textbf{Technologies}: PHP, Laravel 5.2, Bootstrap
+\end{itemize}
+}
+\cventry{2016--2017}{Developer}{Behshahr}{DNA-ToolKit}{}{Implementation Of An Application With GUI, For Analyzing Data (DNA) With Some Creative Features, Such As Clustering, Motif Count, . . .
 \begin{itemize}%
-\item \textbf{Technologies}: Wordpress, Nginx, Foundation, Mysql, PHP
-\end{itemize}}
-
-\cventry{2016}{Artaoj}{Developer and System administrator}{}{}{
+\item \textbf{Technologies}: Python, TKinter, scikit-learn
+\end{itemize}
+}
+\cventry{2017--2018}{Frontend developer}{Remote}{Sari}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
 \begin{itemize}%
-\item \textbf{Technologies}: Wordpress, Nginx, Bootstrap, Mysql, PHP
-\end{itemize}}
-
-\cventry{2016}{PelastAtlas}{Developer and System administrator}{}{}{
-\begin{itemize}%
-\item \textbf{Technologies}: Wordpress, Nginx, Bootstrap, Mysql, PHP
-\end{itemize}}
-
+\item \textbf{Technologies}: Html, CSS, Javascript, Jquery, Responsive Design
+\end{itemize}
+}
 
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description}
 
 \section{Languages}
-\cvdoubleitem{Persian}{Native}{English}{Fluent}
+\cvdoubleitem{Persian}{Native}{English}{Limited working proficiency}
 
 \section{Tools and Skills}
-\cvitem{Operating System}{Linux Family(Ubuntu, Debian, CentOS)}
+\cvitem{Operating System}{Linux Family(Ubuntu, CentOS)}
 \cvitem{Web Server}{Nginx, Apache}
 \cvitem{Containerization}{Docker}
 \cvitem{Version Control}{Git}
-\cvitem{Programming Languages}{PHP, Python, JavaScript, C++, Bash}
+\cvitem{Programming Languages}{PHP, Python, JavaScript, Bash}
 \cvitem{Databases}{MySQL, MongoDB, Redis}
 \cvitem{Message-Broker}{RabbitMQ}
 \cvitem{Software Development Skill}{RestAPI structure, TDD}
-\cvitem{Web Development}{Laravel, CodeIgniter, Express}
+\cvitem{Web Development}{Laravel, Express}
 \cvitem{Code Documentation}{Jsdoc, Swagger}
 \cvitem{Code Analysis}{SonarQube}
-\cvitem{Other Skills}{Continuous Integration, Continuous Delivery, Gitlab CI/CD}
+\cvitem{Other Skills}{Continuous Integration, Continuous Deployment/Delivery, Gitlab CI/CD, Scrum, R&D, Gitflow, Reverse Proxy}
+\cvitem{Familiar With}{Ansible, Prometheus, AWS. Heroku, Travis}
 
-%\section{Interests}
-%\cvitem{Music}{Classical, Rock, Alternative, Heavy Metal}
-%\cvitem{Photography}{Portrait and Nature}
-%\cvitem{}{Description}
+\section{Interests}
+\cvitem{Music}{Traditional, Pop, Classical}
+\cvitem{Sport}{Ping Pong and martial}
+\cvitem{}{Spend time with my family}
 
 \section{Presentations and workshops}
-\cventry{2012}{Code of conducts in free software communities}{Ubuntu 12.04 release party}{Islamic Azad University, Tehran south branch}{}{}
-\cventry{2013}{An introduction to Chakra GNU/Linux}{Tehran Linux Users Group (LUG)}{DPI college}{}{}
-\cventry{2014}{Opensource hardware introduction}{Tehran Software Freedom day}{Sharif University of Technology}{}{}
-\cventry{2014}{An intro to opensource hardware and its usages}{Tehran Linux Users Group (LUG)}{Toosan}{}{}
-\cventry{2015}{Intro to opensource engineering Softwares}{Karaj Software Freedom day}{-}{}{}
-\cventry{2015}{An intro to Raspberry pi}{Ubuntu 14.04 release party}{University of Tehran}{}{}
-\cventry{2015}{Arduino Workshop}{Tehran software freedom day}{Sharif University of Technology}{}{}
-\cventry{2016}{A roadmap to be a programmer}{Ubuntu 16.04 release party}{University of Isfahan}{}{}
-\cventry{2016}{Arduino Workshop}{Isfahan Software freedom day}{University of Isfahan}{}{}
-\cventry{2016}{Review of software packaging tools}{Isfahan Software freedom day}{University of Isfahan}{}{}
-\cventry{2016}{A review of LXC daemon AKA LXD}{Tehran Linux users Group (LUG)}{University of Tehran}{}{}
+\cventry{2016}{}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}
+\cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}
+\cventry{2018}{Teaching Assistant Robotic Principles}{Linux Essential}{University of Science and Technology of Mazandaran}{}{}
 
 
 % Publications from a BibTeX file without multibib
