--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -71,15 +71,15 @@ backend side using PHP and used Python for machine vision and computational inte
 \begin{itemize}%
 \item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, SonarQube, REST API, HTTPS, HTTP2, TLSV1.2
 \end{itemize}}
-%%new
-\cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{US}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
+
+\cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
 \begin{itemize}%
 \item \textbf{Technologies}: Node.Js, AWS (SES, Lambda, Cloudwatch, Api gateway)
-\end{itemize}
-}
-\cventry{2017--2018}{Backend Developer}{Karaj}{}{Design and Implementation Dahyav website for renting house and villa
+\end{itemize}}
+%%new
+\cventry{2017--2018}{Backend Developer}{Karaj}{Dahyav}{}{Design and Implementation Dahyav website for renting house and villa
 \begin{itemize}%
-\item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache
+\item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache, REST API
 \end{itemize}
 }
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description}
@@ -91,7 +91,6 @@ backend side using PHP and used Python for machine vision and computational inte
 \item \textbf{Technologies}: Centos, Squid
 \end{itemize}
 }
-%%new
 \cventry{2018--2019}{DevOps Enginner}{Remote}{Tehran}{}{It is a startup project
 \begin{itemize}%
 \item \textbf{Technologies}: Python, Django, gunicorn, Gitlab-CI, Heroku, AWS S3
@@ -100,11 +99,6 @@ backend side using PHP and used Python for machine vision and computational inte
 \cventry{2018--2019}{Sysadmin}{Sari}{}{Setting Up Jira Software and maintenance
 \begin{itemize}%
 \item \textbf{Technologies}: Ubuntu, Jira, Postgrers
-\end{itemize}
-}
-\cventry{2017--2018}{Backend Developer}{Karaj}{Dahyav}{}{Design and Implementation Dahyav website for renting house and villa
-\begin{itemize}%
-\item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache, REST API
 \end{itemize}
 }
 \cventry{2017--2018}{Developer}{Behshahr}{Detect Traffic Sign}{}{Detect traffic sign with image processing
@@ -122,7 +116,7 @@ backend side using PHP and used Python for machine vision and computational inte
 \item \textbf{Technologies}: Python, TKinter, scikit-learn
 \end{itemize}
 }
-\cventry{2017--2018}{Frontend developer}{Remote}{Sari}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
+\cventry{2017--2018}{Frontend developer}{Remote}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
 \begin{itemize}%
 \item \textbf{Technologies}: Html, CSS, Javascript, Jquery, Responsive Design
 \end{itemize}
