--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -67,16 +67,16 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Experience}
 %\subsection{Vocational}
-\cventry{2018--2019}{Software engineer and DevOps}{Sari}{}{Team Preparation for Overseas Projects.
+\cventry{2018--2019}{Software engineer and DevOps}{Remote}{Sari}{}{Team Preparation for Overseas Projects.
 \begin{itemize}%
 \item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, SonarQube, REST API, HTTPS, HTTP2, TLSV1.2
-\end{itemize}}
-
+\end{itemize}
+}
 \cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
 \begin{itemize}%
 \item \textbf{Technologies}: Node.Js, AWS (SES, Lambda, Cloudwatch, Api gateway)
-\end{itemize}}
-%%new
+\end{itemize}
+}
 \cventry{2017--2018}{Backend Developer}{Karaj}{Dahyav}{}{Design and Implementation Dahyav website for renting house and villa
 \begin{itemize}%
 \item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache, REST API
@@ -96,7 +96,7 @@ backend side using PHP and used Python for machine vision and computational inte
 \item \textbf{Technologies}: Python, Django, gunicorn, Gitlab-CI, Heroku, AWS S3
 \end{itemize}
 }
-\cventry{2018--2019}{Sysadmin}{Sari}{}{Setting Up Jira Software and maintenance
+\cventry{2018--2019}{Sysadmin}{Remote}{Sari}{}{Setting Up Jira Software and maintenance
 \begin{itemize}%
 \item \textbf{Technologies}: Ubuntu, Jira, Postgrers
 \end{itemize}
