--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -130,17 +130,22 @@ backend side using PHP and used Python for machine vision and computational inte
 \section{Tools and Skills}
 \cvitem{Operating System}{Linux Family(Ubuntu, CentOS)}
 \cvitem{Web Server}{Nginx, Apache}
-\cvitem{Containerization}{Docker}
+\cvitem{Amazon Services}{S3, SES, Lambda, Cloudwatch, Api gateway, Elastic Beanstalk}
+\cvitem{Containers}{Docker}
+\cvitem{Automation tools}{Gitlab CI/CD}
 \cvitem{Version Control}{Git}
 \cvitem{Programming Languages}{PHP, Python, JavaScript, Bash}
 \cvitem{Databases}{MySQL, MongoDB, Redis}
 \cvitem{Message-Broker}{RabbitMQ}
+\cvitem{Linux Network tools}{UFW, IPTables, Nmap}
+\cvitem{Monitoring}{Prometheus + Grafana}
 \cvitem{Software Development Skill}{RestAPI structure, TDD}
 \cvitem{Web Development}{Laravel, Express}
 \cvitem{Code Documentation}{Jsdoc, Swagger}
 \cvitem{Code Analysis}{SonarQube}
-\cvitem{Other Skills}{Continuous Integration, Continuous Deployment/Delivery, Gitlab CI/CD, Scrum, R&D, Gitflow, Reverse Proxy}
-\cvitem{Familiar With}{Ansible, Prometheus, AWS. Heroku, Travis}
+\cvitem{Storage}{Ceph, Minio, S3}
+\cvitem{Other Skills}{Continuous Integration, Continuous Deployment, Continuous Delivery, Scrum, Gitflow, Reverse Proxy}
+\cvitem{Familiar With}{Ansible, Heroku, Travis}
 
 \section{Interests}
 \cvitem{Music}{Traditional, Pop, Classical}
@@ -149,7 +154,7 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Presentations and workshops}
 \cventry{2016}{}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}
-\cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}
+\cventry{2017}{}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}
 \cventry{2018}{Teaching Assistant Robotic Principles}{Linux Essential}{University of Science and Technology of Mazandaran}{}{}
 
 
