--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -111,14 +111,14 @@ backend side using PHP and used Python for machine vision and computational inte
 \item \textbf{Technologies}: PHP, Laravel 5.2, Bootstrap
 \end{itemize}
 }
-\cventry{2016--2017}{Developer}{Behshahr}{DNA-ToolKit}{}{Implementation Of An Application With GUI, For Analyzing Data (DNA) With Some Creative Features, Such As Clustering, Motif Count, . . .
-\begin{itemize}%
-\item \textbf{Technologies}: Python, TKinter, scikit-learn
-\end{itemize}
-}
 \cventry{2017--2018}{Frontend developer}{Remote}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
 \begin{itemize}%
 \item \textbf{Technologies}: Html, CSS, Javascript, Jquery, Responsive Design
+\end{itemize}
+}
+\cventry{2016--2017}{Developer}{Behshahr}{DNA-ToolKit}{}{Implementation Of An Application With GUI, For Analyzing Data (DNA) With Some Creative Features, Such As Clustering, Motif Count, . . .
+\begin{itemize}%
+\item \textbf{Technologies}: Python, TKinter, scikit-learn
 \end{itemize}
 }
 
@@ -143,7 +143,7 @@ backend side using PHP and used Python for machine vision and computational inte
 \cvitem{Web Development}{Laravel, Express}
 \cvitem{Code Documentation}{Jsdoc, Swagger}
 \cvitem{Code Analysis}{SonarQube}
-\cvitem{Storage}{Ceph, Minio, S3}
+\cvitem{Storage}{S3}
 \cvitem{Other Skills}{Continuous Integration, Continuous Deployment, Continuous Delivery, Scrum, Gitflow, Reverse Proxy}
 \cvitem{Familiar With}{Ansible, Heroku, Travis}
 
@@ -153,9 +153,10 @@ backend side using PHP and used Python for machine vision and computational inte
 \cvitem{}{Spend time with my family}
 
 \section{Presentations and workshops}
-\cventry{2016}{}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}
-\cventry{2017}{}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}
 \cventry{2018}{Teaching Assistant Robotic Principles}{Linux Essential}{University of Science and Technology of Mazandaran}{}{}
+\cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}{}
+\cventry{2016}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}{}
+
 
 
 % Publications from a BibTeX file without multibib
