--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -57,19 +57,19 @@
 I'm a software developer who started to work on web platform especially the
 backend side using PHP and used Python for machine vision and computational intelligence and now using node.js for asynchronous programming. After starting my career in backend development, I started to be a DevOps because I believe it’s a good opportunity when you do your backend job and operations, simultaneously.
 \section{Education}
-\cventry{2014--2019}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{GPA: 3.1/4}}{Software Engineering}  % arguments 3 to 6 can be left empty
+\cventry{2014--2019}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{GPA: 2.9/4}}{Software Engineering}  % arguments 3 to 6 can be left empty
 \cventry{2010--2014}{Diploma}{29 Aban Highschool}{Sari}{\textit{19.28}}{Mathematics and physics}
 
-\section{Thesis}
-\cvitem{title}{\emph{Implementation of the ROS Package in the Docker Tool}}
-\cvitem{supervisors}{Dr. Reza Javanmard}
-%\cvitem{description}{Short thesis abstract}
+% \section{Thesis}
+% \cvitem{title}{\emph{Implementation of the ROS Package in the Docker Tool}}
+% \cvitem{supervisors}{Dr. Reza Javanmard}
+% \cvitem{description}{Short thesis abstract}
 
 \section{Experience}
 %\subsection{Vocational}
-\cventry{2018--2019}{Software engineer and DevOps}{Remote}{Sari}{}{Team Preparation for Overseas Projects.
+\cventry{2018--2019}{Software engineer and DevOps}{}{Sari}{}{
 \begin{itemize}%
-\item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, SonarQube, REST API, HTTPS, HTTP2, TLSV1.2
+\item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, JSDoc, SonarQube, Jira - Atlassian, REST API, HTTPS, HTTP2, TLSV1.2
 \end{itemize}
 }
 \cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
@@ -86,31 +86,31 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Freelance Projects}
 %\subsection{Vocational}
-\cventry{2018--2019}{Sysadmin}{Remote}{Tehran}{}{Use Squid for PSN and maintenance
-\begin{itemize}%
-\item \textbf{Technologies}: Centos, Squid
-\end{itemize}
-}
+% \cventry{2018--2019}{Sysadmin}{Remote}{Tehran}{}{Use Squid for PSN and maintenance
+% \begin{itemize}%
+% \item \textbf{Technologies}: Centos, Squid
+% \end{itemize}
+% }
 \cventry{2018--2019}{DevOps Enginner}{Remote}{Tehran}{}{It is a startup project
 \begin{itemize}%
 \item \textbf{Technologies}: Python, Django, gunicorn, Gitlab-CI, Heroku, AWS S3
 \end{itemize}
 }
-\cventry{2018--2019}{Sysadmin}{Remote}{Sari}{}{Setting Up Jira Software and maintenance
-\begin{itemize}%
-\item \textbf{Technologies}: Ubuntu, Jira, Postgrers
-\end{itemize}
-}
-\cventry{2017--2018}{Developer}{Behshahr}{Detect Traffic Sign}{}{Detect traffic sign with image processing
-\begin{itemize}%
-\item \textbf{Technologies}: Python, OpenCV
-\end{itemize}
-}
-\cventry{2017--2018}{Frontend and backend developer}{Behshahr}{Final Project System}{}{This application is written for managing the final project of university students
-\begin{itemize}%
-\item \textbf{Technologies}: PHP, Laravel 5.2, Bootstrap
-\end{itemize}
-}
+% \cventry{2018--2019}{Sysadmin}{Remote}{Sari}{}{Setting Up Jira Software and maintenance
+% \begin{itemize}%
+% \item \textbf{Technologies}: Ubuntu, Jira, Postgrers
+% \end{itemize}
+% }
+% \cventry{2017--2018}{Developer}{Behshahr}{Detect Traffic Sign}{}{Detect traffic sign with image processing
+% \begin{itemize}%
+% \item \textbf{Technologies}: Python, OpenCV
+% \end{itemize}
+% }
+% \cventry{2017--2018}{Frontend and backend developer}{Behshahr}{Final Project System}{}{This application is written for managing the final project of university students
+% \begin{itemize}%
+% \item \textbf{Technologies}: PHP, Laravel 5.2, Bootstrap
+% \end{itemize}
+% }
 \cventry{2017--2018}{Frontend developer}{Remote}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
 \begin{itemize}%
 \item \textbf{Technologies}: Html, CSS, Javascript, Jquery, Responsive Design
@@ -128,35 +128,42 @@ backend side using PHP and used Python for machine vision and computational inte
 \cvdoubleitem{Persian}{Native}{English}{Limited working proficiency}
 
 \section{Tools and Skills}
-\cvitem{Operating System}{Linux Family(Ubuntu, CentOS)}
-\cvitem{Web Server}{Nginx, Apache}
-\cvitem{Amazon Services}{S3, SES, Lambda, Cloudwatch, Api gateway, Elastic Beanstalk}
+\cvitem{Operating System}{Linux Family(Ubuntu, Debian)}
+\cvitem{Editor}{Vim}
+\cvitem{Web Server}{Nginx}
 \cvitem{Containers}{Docker}
 \cvitem{Automation tools}{Gitlab CI/CD}
 \cvitem{Version Control}{Git}
-\cvitem{Programming Languages}{PHP, Python, JavaScript, Bash}
-\cvitem{Databases}{MySQL, MongoDB, Redis}
+\cvitem{Scripting Languages}{PHP, Python, JavaScript}
+% \cvitem{Programming Languages}{Rust}
+\cvitem{Databases}{MySQL, MongoDB}
 \cvitem{Message-Broker}{RabbitMQ}
-\cvitem{Linux Network tools}{UFW, IPTables, Nmap}
-\cvitem{Monitoring}{Prometheus + Grafana}
-\cvitem{Software Development Skill}{RestAPI structure, TDD}
-\cvitem{Web Development}{Laravel, Express}
+\cvitem{Linux Network tools}{ping, tcpdump, mtr, traceroute, netstat, iptables}
+\cvitem{Process Monitoring}{ps, top, htop}
+\cvitem{Software Development Skill}{RestAPI structure}
+\cvitem{Web Frameworks}{Laravel, Express}
 \cvitem{Code Documentation}{Jsdoc, Swagger}
 \cvitem{Code Analysis}{SonarQube}
-\cvitem{Storage}{S3}
-\cvitem{Other Skills}{Continuous Integration, Continuous Deployment, Continuous Delivery, Scrum, Gitflow, Reverse Proxy}
-\cvitem{Familiar With}{Ansible, Heroku, Travis}
+\cvitem{methodology}{Agile, Scrum}
+\cvitem{Amazon Services}{S3, SES, Lambda, Cloudwatch, Api gateway, Elastic Beanstalk}
+\cvitem{Other Skills}{Networking Concepts, Continuous Integration, Continuous Deployment, Gitflow, Reverse Proxy}
+\cvitem{Familiar With}{HAProxy, Ansible, ELK Stack, Prometheus, Rust}
 
 \section{Interests}
-\cvitem{Music}{Traditional, Pop, Classical}
+\cvitem{Music}{Pop, Classical}
 \cvitem{Sport}{Ping Pong and martial}
 \cvitem{}{Spend time with my family}
 
 \section{Presentations and workshops}
 \cventry{2018}{Teaching Assistant Robotic Principles}{Linux Essential}{University of Science and Technology of Mazandaran}{}{}
-\cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}{}
-\cventry{2016}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}{}
+% \cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}{}
+% \cventry{2016}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}{}
 
+
+\section{Public Profiles}
+\cvitem{LinkedIn}{https://www.linkedin.com/in/parham-nikdouz}
+\cvitem{Github}{https://github.com/ParhamNikdouz}
+\cvitem{Mastodon}{mastodon.social/@ParhamNikdouz}
 
 
 % Publications from a BibTeX file without multibib
