Update tex/ParhamNikdouzCV.tex, .gitlab-ci.yml files

--- a/tex/ParhamNikdouzCV.tex
+++ b/tex/ParhamNikdouzCV.tex
@@ -25,7 +25,7 @@
 
 % personal data
 \name{Parham}{Nikdouz}
-\title{Software Developer and DevOps Engineer}                               % optional, remove / comment the line if not wanted
+\title{Software Developer}                               % optional, remove / comment the line if not wanted
 \address{Salman Farsi}{Sari}{Iran}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+989390702219}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
@@ -55,7 +55,7 @@
 
 \section{Overview}
 I'm a software developer who started to work on web platform especially the
-backend side using PHP and used Python for machine vision and computational intelligence and now using node.js for asynchronous programming. After starting my career in backend development, I started to be a DevOps because I believe it’s a good opportunity when you do your backend job and operations, simultaneously.
+backend side using PHP and used Python for machine vision and computational intelligence and now using node.js for asynchronous programming.
 \section{Education}
 \cventry{2014--2019}{B.Sc}{University of Science and Technology of Mazandaran}{Behshahr}{\textit{GPA: 2.9/4}}{Software Engineering}  % arguments 3 to 6 can be left empty
 \cventry{2010--2014}{Diploma}{29 Aban Highschool}{Sari}{\textit{19.28}}{Mathematics and physics}
@@ -67,17 +67,7 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Experience}
 %\subsection{Vocational}
-\cventry{2018--2019}{Software engineer and DevOps}{}{Sari}{}{
-\begin{itemize}%
-\item \textbf{Technologies}: Node.Js, Express, MongoDB, ElasticSearch, RabbitMQ, Redis, Docker, Gitlab-CI, Nginx, Git, TDD, Angular, Swagger, JSDoc, SonarQube, Jira - Atlassian, REST API, HTTPS, HTTP2, TLSV1.2
-\end{itemize}
-}
-\cventry{2018--2019}{Backend Developer and DevOps Enginner}{Remote}{Cloudhelp}{}{Design and Implementation Cloudhelp company website
-\begin{itemize}%
-\item \textbf{Technologies}: Node.Js, AWS (SES, Lambda, Cloudwatch, Api gateway)
-\end{itemize}
-}
-\cventry{2017--2018}{Backend Developer}{Karaj}{Dahyav}{}{Design and Implementation Dahyav website for renting house and villa
+\cventry{2017--2018}{Backend Developer}{}{Dahyav}{}{Design and Implementation Dahyav website and android application for renting house and villa
 \begin{itemize}%
 \item \textbf{Technologies}: PHP, Laravel 5.5, Mysql, Apache, REST API
 \end{itemize}
@@ -86,41 +76,6 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Freelance Projects}
 %\subsection{Vocational}
-% \cventry{2018--2019}{Sysadmin}{Remote}{Tehran}{}{Use Squid for PSN and maintenance
-% \begin{itemize}%
-% \item \textbf{Technologies}: Centos, Squid
-% \end{itemize}
-% }
-\cventry{2018--2019}{DevOps Enginner}{Remote}{Tehran}{}{It is a startup project
-\begin{itemize}%
-\item \textbf{Technologies}: Python, Django, gunicorn, Gitlab-CI, Heroku, AWS S3
-\end{itemize}
-}
-% \cventry{2018--2019}{Sysadmin}{Remote}{Sari}{}{Setting Up Jira Software and maintenance
-% \begin{itemize}%
-% \item \textbf{Technologies}: Ubuntu, Jira, Postgrers
-% \end{itemize}
-% }
-% \cventry{2017--2018}{Developer}{Behshahr}{Detect Traffic Sign}{}{Detect traffic sign with image processing
-% \begin{itemize}%
-% \item \textbf{Technologies}: Python, OpenCV
-% \end{itemize}
-% }
-% \cventry{2017--2018}{Frontend and backend developer}{Behshahr}{Final Project System}{}{This application is written for managing the final project of university students
-% \begin{itemize}%
-% \item \textbf{Technologies}: PHP, Laravel 5.2, Bootstrap
-% \end{itemize}
-% }
-\cventry{2017--2018}{Frontend developer}{Remote}{Upsketchup}{}{Upsketch is a collection of architects and archivers of artists who try to transfer what they can to students and professionals in the field of architecture to transfer the body and eventually read from them to exchange together.
-\begin{itemize}%
-\item \textbf{Technologies}: Html, CSS, Javascript, Jquery, Responsive Design
-\end{itemize}
-}
-\cventry{2016--2017}{Developer}{Behshahr}{DNA-ToolKit}{}{Implementation Of An Application With GUI, For Analyzing Data (DNA) With Some Creative Features, Such As Clustering, Motif Count, . . .
-\begin{itemize}%
-\item \textbf{Technologies}: Python, TKinter, scikit-learn
-\end{itemize}
-}
 
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description}
 
@@ -129,25 +84,14 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Tools and Skills}
 \cvitem{Operating System}{Linux Family(Ubuntu, Debian)}
-\cvitem{Editor}{Vim}
-\cvitem{Web Server}{Nginx}
-\cvitem{Containers}{Docker}
-\cvitem{Automation tools}{Gitlab CI/CD}
+\cvitem{Editor}{Vim, Vscode}
+\cvitem{Web Server}{Apache}
 \cvitem{Version Control}{Git}
-\cvitem{Scripting Languages}{PHP, Python, JavaScript}
-% \cvitem{Programming Languages}{Rust}
-\cvitem{Databases}{MySQL, MongoDB}
-\cvitem{Message-Broker}{RabbitMQ}
-\cvitem{Linux Network tools}{ping, tcpdump, mtr, traceroute, netstat, iptables}
-\cvitem{Process Monitoring}{ps, top, htop}
+\cvitem{Scripting Languages}{PHP, Javascript}
+\cvitem{Web Design}{HTML, CSS}
+\cvitem{Databases}{MySQL}
 \cvitem{Software Development Skill}{RestAPI structure}
-\cvitem{Web Frameworks}{Laravel, Express}
-\cvitem{Code Documentation}{Jsdoc, Swagger}
-\cvitem{Code Analysis}{SonarQube}
-\cvitem{methodology}{Agile, Scrum}
-\cvitem{Amazon Services}{S3, SES, Lambda, Cloudwatch, Api gateway, Elastic Beanstalk}
-\cvitem{Other Skills}{Networking Concepts, Continuous Integration, Continuous Deployment, Gitflow, Reverse Proxy}
-\cvitem{Familiar With}{HAProxy, Ansible, ELK Stack, Prometheus, Rust}
+\cvitem{Web Frameworks}{Laravel}
 
 \section{Interests}
 \cvitem{Music}{Pop, Classical}
@@ -156,13 +100,11 @@ backend side using PHP and used Python for machine vision and computational inte
 
 \section{Presentations and workshops}
 \cventry{2018}{Teaching Assistant Robotic Principles}{Linux Essential}{University of Science and Technology of Mazandaran}{}{}
-% \cventry{2017}{Cloud Computing}{University of Science and Technology of Mazandaran}{}{}{}
-% \cventry{2016}{PHP Programming Language}{University of Science and Technology of Mazandaran}{}{}{}
-
 
 \section{Public Profiles}
 \cvitem{LinkedIn}{https://www.linkedin.com/in/parham-nikdouz}
 \cvitem{Github}{https://github.com/ParhamNikdouz}
+\cvitem{Gitlab}{https://gitlab.com/ParhamNikdouz}
 \cvitem{Mastodon}{mastodon.social/@ParhamNikdouz}
 
 
